<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dip"
        android:text="@string/app_description"
        android:textColor="@color/White"
        android:textSize="48dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/login_head"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/sc_am_head"
            android:contentDescription="@string/im_list_image_description"
            android:padding="4dp"
            android:src="@drawable/icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/login_account_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_accout_string"
                android:inputType="text" />

            <EditText
                android:id="@+id/login_pwd_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_pwd_string"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:orientation="horizontal"
        android:paddingLeft="50dip"
        android:paddingRight="40dip" >

        <CheckBox
            android:id="@+id/login_remember_check"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/login_checkbox_remember_string" />

        <CheckBox
            android:id="@+id/login_hideline_check"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_checkbox_hideline_string" />
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/btn_style_blue"
        android:text="@string/login_button_string" />

    <Button
        android:id="@+id/login_register_button"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:background="@drawable/btn_style_blue"
        android:text="@string/login_button_register_string" />

</LinearLayout>