<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ChatingBG" >

    <LinearLayout
        android:id="@+id/im_tab_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/LightBlue"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/im_tab_bar_head"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:contentDescription="@string/im_list_image_description"
            android:src="@drawable/head" />

        <TextView
            android:id="@+id/im_tab_bar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/im_tab_bar_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/im_list_image_description" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/im_tab_bar"
        android:layout_width="fill_parent"
        android:layout_height="47dip"
        android:layout_below="@id/im_tab_head"
        android:background="#C9E6FF"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_one"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/im_tab_friend"
                android:textSize="22dip" />

            <TextView
                android:id="@+id/text_two"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/im_tab_crowd"
                android:textSize="22dip" />

            <TextView
                android:id="@+id/text_three"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/im_tab_chatting"
                android:textSize="22dip" />
        </LinearLayout>

        <ImageView
            android:id="@+id/im_tab_cursor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dip"
            android:contentDescription="@string/im_list_image_description"
            android:scaleType="matrix"
            android:src="@drawable/tab_underline" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/player_body"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/im_tab_bar"
        android:background="@color/Silver" >

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </FrameLayout>

</RelativeLayout>